--- a/index.html
+++ b/index.html
@@ -8,6 +8,63 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- <div class="page"> -->
+        <div class="header-and-col-a">
+            <div class="header">
+                <div class="header-logo">Header Logo</div>
+                <div class="header-links">
+                    <a class="header-link">header link 1</a>
+                    <a class="header-link">header link 2</a>
+                    <a class="header-link">header link 3</a>
+                </div>
+            </div>
+            <div class="col-a">
+                <div class="a-1">
+                    <div class="hero-main">Awesome website</div>
+                    <div class="hero-sec">website description</div>
+                    <div class="sign-up-button">Sign up</div>
+                </div>
+                <div class="a-2">this is a placeholder for an image</div>
+            </div>
+        </div>    
+        <div class="col-b">
+            <div class="b-1">Some random information</div>
+            <div class="b-2">
+                <div class="b-2-child">
+                    <div class="b-image"></div>
+                    <div class="b-desc">ala ala ala ala ala ala ala ala</div>
+                </div>
+                <div class="b-2-child">
+                    <div class="b-image"></div>
+                    <div class="b-desc">bla bla bla bla bla</div>
+                </div>
+                <div class="b-2-child">
+                    <div class="b-image"></div>
+                    <div class="b-desc">cla cla cla cla cla</div>
+                </div>
+                <div class="b-2-child">
+                    <div class="b-image"></div>
+                    <div class="b-desc">dla dla dla dla dla</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-c">
+            <div class="quote">O logbon ju. o gbon, o gbon, o gbon, iwo lo gbon ju... 
+                A gbongbon ju ogbon a ma m'ologbin go, iwo lo gbon ju.</div>
+            <div class="author">-Asake</div>  
+        </div>
+        <div class="col-d">
+            <div class="call">
+                <div class="to-action">Call to action! it's time!</div>
+                <div class="oblig">Sign up for our product by clicking that button 
+                    right over there!</div>
+            </div>
+            <div class="sign-up-button-2">Sign up</div>
+        </div>
+        <div class="footer-con">
+            <div class="footer"> copyright c The Odin Project 2022</div>
+        </div>
+    <!-- </div> -->
     
 </body>
 </html>
